Reformat code belisimo ma fukin